long-term filenames

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,7 +33,7 @@
         <parameter-ui></parameter-ui>
     </div>
     <!--<script-io></script-io>-->
-    
-<script type="text/javascript" src="src/bundle/vendor.d41d8cd98f00b204e980.min.js"></script><script type="text/javascript" src="src/bundle/bundle.7b7d46458eca17ff213e.min.js"></script></body>
+    <%= htmlWebpackPlugin.files.webpackManifest %>
+</body>
 
 </html>
