--- a/css/creative.css
+++ b/css/creative.css
@@ -219,7 +219,7 @@ header.masthead p {
 }
 
 .portfolio-box {
-  visibility: hidden;
+  /* visibility: hidden; */
   position: relative;
   display: block;
   max-width: 650px;
